--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
 	<meta charset="utf-8">
-  	
+  	<link rel="stylesheet" href="//releases.flowplayer.org/6.0.4/skin/minimalist.css">
+  	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+  	<script src="//releases.flowplayer.org/6.0.4/flowplayer.min.js"></script>
 </head>
-<body style="width: 80%; margin: 0 auto"><br><br><br><br>
-	
-
-	
+<body>
+  <div class="flowplayer">
+    <video>
+      <source type="video/webm"
+              src="//stream.flowplayer.org/drive.webm">
+      <source type="video/mp4"
+              src="//stream.flowplayer.org/drive.mp4">
+      </video>
+  </div>
 </body>
 </html>
