flowplayer no logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   	<link rel="stylesheet" href="//releases.flowplayer.org/6.0.4/skin/minimalist.css">
   	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   	<script src="//releases.flowplayer.org/6.0.4/flowplayer.min.js"></script>
+  	<link rel="stylesheet" href="mystyles.css">
+
 </head>
 <body>
   <div class="flowplayer">
@@ -16,4 +18,10 @@
       </video>
   </div>
 </body>
+<script type="text/javascript">
+	$('.a').on('click',function(){
+		alert('Hola');
+	});
+
+</script>
 </html>
